[gd_scene load_steps=10 format=2]

[ext_resource path="res://scripts/Game.gd" type="Script" id=1]
[ext_resource path="res://graphics/game.png" type="Texture" id=2]
[ext_resource path="res://scenes/Player.tscn" type="PackedScene" id=3]
[ext_resource path="res://graphics/road.png" type="Texture" id=4]
[ext_resource path="res://graphics/Font_8.tres" type="DynamicFont" id=5]
[ext_resource path="res://graphics/uibar.png" type="Texture" id=6]

[sub_resource type="DynamicFont" id=1]
size = 1
outline_color = Color( 0, 0, 0, 0 )

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 1, 1, 0.333333, 1 )

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0.666667, 0.333333, 0, 1 )

[node name="Game" type="Node2D"]
script = ExtResource( 1 )

[node name="bg" type="CanvasLayer" parent="."]
layer = -1

[node name="Control" type="Control" parent="bg"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = 320.0
margin_bottom = 240.0
rect_min_size = Vector2( 320, 240 )

[node name="TextureRect" type="TextureRect" parent="bg/Control"]
margin_right = 40.0
margin_bottom = 40.0
texture = ExtResource( 2 )

[node name="Road1" type="Sprite" parent="."]
position = Vector2( 129, -60 )
texture = ExtResource( 4 )

[node name="Road5" type="Sprite" parent="."]
position = Vector2( 129, -20 )
texture = ExtResource( 4 )

[node name="Road6" type="Sprite" parent="."]
position = Vector2( 129, 20 )
texture = ExtResource( 4 )

[node name="Road2" type="Sprite" parent="."]
position = Vector2( 129, 60 )
texture = ExtResource( 4 )

[node name="Road7" type="Sprite" parent="."]
position = Vector2( 129, 100 )
texture = ExtResource( 4 )

[node name="Road8" type="Sprite" parent="."]
position = Vector2( 129, 140 )
texture = ExtResource( 4 )

[node name="Road3" type="Sprite" parent="."]
position = Vector2( 129, 180 )
texture = ExtResource( 4 )

[node name="Road4" type="Sprite" parent="."]
position = Vector2( 129, 300 )
texture = ExtResource( 4 )

[node name="Road9" type="Sprite" parent="."]
position = Vector2( 129, 260 )
texture = ExtResource( 4 )

[node name="Road10" type="Sprite" parent="."]
position = Vector2( 129, 220 )
texture = ExtResource( 4 )

[node name="Player" parent="." instance=ExtResource( 3 )]

[node name="TimerScore" type="Timer" parent="."]

[node name="TimerFuel" type="Timer" parent="."]

[node name="TimerSFuel" type="Timer" parent="."]
wait_time = 3.0

[node name="TimerCars" type="Timer" parent="."]

[node name="TimerTreeLeft" type="Timer" parent="."]

[node name="TimerTreeRight" type="Timer" parent="."]

[node name="TimerFruits" type="Timer" parent="."]

[node name="TimerEGG" type="Timer" parent="."]
one_shot = true

[node name="GUI" type="CanvasLayer" parent="."]

[node name="C" type="Control" parent="GUI"]
margin_right = 320.0
margin_bottom = 240.0
rect_min_size = Vector2( 320, 240 )

[node name="sidebar" type="TextureRect" parent="GUI/C"]
margin_right = 320.0
margin_bottom = 240.0
texture = ExtResource( 6 )

[node name="HiScore" type="Label" parent="GUI/C"]
margin_left = 267.0
margin_top = 19.0
margin_right = 307.0
margin_bottom = 33.0
custom_colors/font_color = Color( 0.333333, 0.333333, 0.333333, 1 )
custom_fonts/font = ExtResource( 5 )
text = "0"
align = 2

[node name="Score" type="Label" parent="GUI/C"]
margin_left = 267.0
margin_top = 50.0
margin_right = 307.0
margin_bottom = 64.0
custom_fonts/font = ExtResource( 5 )
text = "0"
align = 2

[node name="FuelBar" type="ProgressBar" parent="GUI/C"]
margin_left = 267.0
margin_top = 81.0
margin_right = 307.0
margin_bottom = 88.0
rect_min_size = Vector2( 40, 7 )
custom_colors/font_color = Color( 0, 0, 0, 0 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 0 )
custom_fonts/font = SubResource( 1 )
custom_styles/fg = SubResource( 2 )
custom_styles/bg = SubResource( 3 )
max_value = 60.0
step = 1.0

[connection signal="timeout" from="TimerScore" to="." method="_on_TimerScore_timeout"]
[connection signal="timeout" from="TimerFuel" to="." method="_on_TimerFuel_timeout"]
[connection signal="timeout" from="TimerSFuel" to="." method="_on_TimerSFuel_timeout"]
[connection signal="timeout" from="TimerCars" to="." method="_on_TimerCars_timeout"]
[connection signal="timeout" from="TimerTreeLeft" to="." method="_on_TimerTreeLeft_timeout"]
[connection signal="timeout" from="TimerTreeRight" to="." method="_on_TimerTreeRight_timeout"]
[connection signal="timeout" from="TimerFruits" to="." method="_on_TimerFruits_timeout"]
[connection signal="timeout" from="TimerEGG" to="." method="_on_TimerEGG_timeout"]
